<resources>
    <string name="app_name">Қазо Намози</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_qibla">Qibla</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit_prayer">Ўзгартириш</string>

    <string name="intro_title">Ассаламу алайкум</string>


    <string name="positive_answer">Ха, биламан</string>
    <string name="negative_answer">Йўқ, еслолмайман</string>
    <string name="intro_description">Ушбу илова сизга Қазо Намозини қайтариб беришда ёрдам беради. Иловани созлаш учун бирнечта саволларга жавоб беришингиз керак. Қанча Қазо намозини қолдирганингизни биласизми?</string>
    <string name="next_page">Кейинги саҳифа</string>
    <string name="your_gender">Жинсингиз</string>
    <string name="gender_page_description">Илтимос қолган Қазо намозингизни ҳисоблашда ёрдам бериш учун ўзингиз ҳақингиздаги ба’зи маълумотларни тўлдиринг. Шахсий маълумотларингиз фақат ҳисоблаш учун ишлатилади</string>
    <string name="female">Аёл</string>
    <string name="male">Эркак</string>
    <string name="cant_remember">Эслай олмайман</string>
    <string name="date_page_title">Туғилган сана ва балоғатга етган ёшингизни киритинг</string>
    <string name="prayer_page_title">Балоғат ёшига тўлганингиздан сўнг маълум бир муддат ўқиган намозингизни киритинг</string>
    <string name="year">Йил</string>
    <string name="month">Ой</string>
    <string name="day">Кун</string>
    <string name="special_female">* Aёлларга хос ҳолатлар. Бир ойда ўртача ҳайз кўриш кунлари</string>
    <string name="edit_page_title">Сиз ўтказиб юборган ҳар қандай намозни ёки ибодат қилган қазо намозни қўшишингиз мумкин.</string>
    <string name="menu_calculate">Қазони ҳисоблаш</string>
    <string name="all">Жами:</string>
    <string name="percent">%</string>
    <string name="accidental_performed">қазо ўқилди</string>
    <string name="today">Бугун</string>

    <string-array name="PrayerTimesInUzb">
        <item>Bomdod</item>
        <item>Peshin</item>
        <item>Asr</item>
        <item>Shom</item>
        <item>Hufton</item>
    </string-array>

    <string-array name="PrayerTimes">
        <item>fajr</item>
        <item>dhuhr</item>
        <item>asr</item>
        <item>maghrib</item>
        <item>isha</item>
    </string-array>

</resources>