<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calculate">

    <fragment
        android:id="@+id/nav_calculate"
        android:name="uz.mnsh.qazo.presentation.main.calculate.CalculateFragment"
        android:label="@string/menu_calculate"
        tools:layout="@layout/fragment_calculate" />

    <fragment
        android:id="@+id/nav_qibla"
        android:name="uz.mnsh.qazo.presentation.main.qibla.QiblaFragment"
        android:label="@string/menu_qibla"
        tools:layout="@layout/fragment_qibla" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="uz.mnsh.qazo.presentation.main.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>