<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/content_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/im_family"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gender_page_description"
        android:textColor="@color/brown_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/gender_tv"
        app:layout_constraintEnd_toEndOf="@id/content_iv"
        app:layout_constraintStart_toStartOf="@id/content_iv"
        app:layout_constraintTop_toBottomOf="@id/content_iv" />


    <TextView
        android:id="@+id/gender_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/your_gender"
        android:textColor="@color/brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="@id/content_iv"
        app:layout_constraintStart_toStartOf="@id/content_iv"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <RadioButton
            android:id="@+id/male_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/rbtn_selector"
            android:button="@null"
            android:elevation="1dp"
            android:paddingStart="50dp"
            android:text="@string/male"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/female_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/rbtn_selector"
            android:button="@null"
            android:elevation="1dp"
            android:paddingStart="50dp"
            android:text="@string/female"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>