<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.welcome.data_collect_screen.page.PrayerPage">

    <ImageView
        android:id="@+id/content_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/im_man_praying"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:text="@string/prayer_page_title"
        android:textColor="@color/brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/year_card"
        app:layout_constraintEnd_toEndOf="@id/content_iv"
        app:layout_constraintStart_toStartOf="@id/content_iv"
        app:layout_constraintTop_toBottomOf="@id/content_iv"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.cardview.widget.CardView
        android:id="@+id/year_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/month_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:paddingVertical="14sp"
                    android:text="@string/year"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <it.sephiroth.android.library.numberpicker.NumberPicker
                android:id="@+id/year_np"
                style="@style/NumberPicker.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:background="@color/white"
                android:descendantFocusability="blocksDescendants"
                android:progress="0"
                app:picker_editTextStyle="@style/textAccent"
                app:picker_min="0"
                app:picker_orientation="vertical"
                app:picker_stepSize="1"
                app:picker_tracker="exponential" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/month_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/day_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_card"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:paddingVertical="14sp"
                    android:text="@string/month"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <it.sephiroth.android.library.numberpicker.NumberPicker
                android:id="@+id/month_np"
                style="@style/NumberPicker.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:background="@color/white"
                android:descendantFocusability="blocksDescendants"
                android:progress="0"
                app:picker_editTextStyle="@style/textAccent"
                app:picker_max="11"
                app:picker_min="0"
                app:picker_orientation="vertical"
                app:picker_stepSize="1"
                app:picker_tracker="exponential" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/day_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/forget_chb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month_card"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:paddingVertical="14sp"
                    android:text="@string/day"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <it.sephiroth.android.library.numberpicker.NumberPicker
                android:id="@+id/day_np"
                style="@style/NumberPicker.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:background="@color/white"
                android:descendantFocusability="blocksDescendants"
                android:progress="0"
                app:picker_editTextStyle="@style/textAccent"
                app:picker_max="30"
                app:picker_min="0"
                app:picker_orientation="vertical"
                app:picker_stepSize="1"
                app:picker_tracker="exponential" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <CheckBox
        android:id="@+id/forget_chb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rbtn_selector"
        android:button="@null"
        android:paddingStart="50dp"
        android:elevation="1dp"
        android:layout_marginBottom="2dp"
        android:text="@string/cant_remember"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.6"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>